--- a/project/myserver/Dockerfile
+++ b/project/myserver/Dockerfile
@@ -13,5 +13,9 @@ RUN pip install --upgrade pip
 COPY ./requirements.txt .
 RUN pip install -r requirements.txt
 
+RUN groupadd -g 999 appuser && \
+    useradd -r -u 999 -g appuser appuser
+USER appuser
+
 # copy project
 COPY . .
